# rust-kafka-parquet-converter

./: Cargo.toml
src/: main.rs
