[package]
name = "rustKafkaToPraquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
rdkafka = { version = "0.36.0", default-features = false, features = ["cmake-build"] }
polars = { version = "0.34.2", features = ["parquet"] }
schema_registry_converter = { version = "4.0.0", default-features = false, features = ["avro", "blocking"] }
tokio = "1.34.0"